# cherab_lhd

./: .gitattributes  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  LICENSE.md  MANIFEST.in  README.md  dev.py  environment.yaml  meson.build  pyproject.toml  setup.cfg  setup.py  typos.toml
.github/workflows/: ci.yaml  pypi-publish.yaml  test.yaml  update-lockfile.yaml
cherab/lhd/: __init__.py  meson.build
cherab/lhd/_build_utils/: gitversion.py
cherab/lhd/emc3/: __init__.py  barycenters.pxd  barycenters.py  barycenters.pyx  curvilinear.py  dataio.py  derivative.py  geometry.pyx  grid.pxd  grid.py  grid.pyx  indices.py  io.py  meson.build  plasma.py
cherab/lhd/emc3/cython/: __init__.pxd  __init__.py  discrete3dmesh.pxd  discrete3dmesh.pyx  intfunction.pxd  intfunction.pyx  mapper.pxd  mapper.pyx  masking.pxd  masking.pyx  meson.build  tetra_mesh.pyx  tetrahedralization.pyx  utility.pyx
cherab/lhd/emc3/inversion/: __init__.py  derivative.py  meson.build  mfr.py  polygon.pyx
cherab/lhd/emc3/inversion/tests/: meson.build
cherab/lhd/emc3/inversions/: __init__.py  derivative.py  mfr.py
cherab/lhd/emc3/raytransfer/: __init__.pxd  __init__.py  emitters.pyx  meson.build  raytransfer.py
cherab/lhd/emc3/repository/: __init__.py  install.py  parse.py  utility.py
cherab/lhd/emc3/tests/: meson.build
cherab/lhd/emitter/: __init__.py
cherab/lhd/emitter/E3E/: __init__.py  data_loader.py  geometry.py  plasma.py  utils.py
cherab/lhd/emitter/E3E/cython/: __init__.pxd  __init__.py  discrete3dmesh.pxd  discrete3dmesh.pyx  intfunction.pxd  intfunction.pyx  mapper.pxd  mapper.pyx  masking.pxd  masking.pyx
cherab/lhd/machine/: __init__.py  pfc_mesh.py  wall.py  wall_outline.py
cherab/lhd/machine/geometry/: format_cad_file.py  meson.build
cherab/lhd/machine/material/: __init__.py  dielectric.py  meson.build  metal.py  roughmetal.py
cherab/lhd/observer/: __init__.py  meson.build
cherab/lhd/observer/bolometer/: __init__.py  irvb.py  load_irvb.py  load_resistive.py  meson.build  resistive.py
cherab/lhd/observer/imaging/: __init__.py  meson.build  pinhole.pyx
cherab/lhd/tools/: __init__.pxd  __init__.py  emc3_cell_mapping.py  fetch.py  meson.build  registries.json  sampler.py  samplers.pyx  spinner.py  utility.py  visualization.py
cherab/lhd/tools/raytransfer/: __init__.pxd  __init__.py  emitters.pyx  raytransfer.py
dev/: build.sh  build_docs_netlify.sh  install.sh
docs/notebooks/emc3/: grid.ipynb
docs/notebooks/machine/: cross_section.ipynb  visualize_LHD_plotly.ipynb
docs/notebooks/observer/: bolo_rb_rays.ipynb  bolos_config.ipynb
docs/source/: api.rst  common_links.rst  conf.py  examples.rst  index.rst
docs/source/_static/: custom.css  gallery.css  switcher.json
docs/source/_templates/: class.rst  module.rst
docs/source/user/: LHD_PFCs.ipynb  LHD_PFCs.rst  contribution.rst  index.rst  installation.rst  quickstart.rst
requirements/: docs.txt  github_pkgs.sh  install.txt
scripts/: build_docs_netlify.sh  install_data.py  install_tetra_mesh.py
tests/emc3/cython/: test_utility.py
