[build-system]
requires = [
    "wheel",
    "numpy",
    "meson-python >= 0.10.0",
    "ninja >= 1.8.2",
    "cython==3.0.0b1",
    "raysect @ git+https://github.com/munechika-koyo/source.git@feature/tetrahedra_mesh",
    "cherab @ git+https://github.com/munechika-koyo/core.git@raysect-0.8-compat",
]
build-backend = "mesonpy"

[project]
name = "cherab-lhd"
description = "Cherab spectroscopy framework: LHD machine configuration"
readme = "README.md"
authors = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
maintainers = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "h5py",
    "raysect @ git+https://github.com/munechika-koyo/source.git@feature/tetrahedra_mesh",
    "cherab @ git+https://github.com/munechika-koyo/core.git@raysect-0.8-compat",
]
dynamic = ["version"]
license = { file = "LICENSE.md" }

[project.optional-dependencies]
docs = [
    "docutils >= 0.19, < 0.20",
    "ipykernel",
    "ipywidgets",
    "nbsphinx",
    "pillow",
    "pygments >= 2.11.0",
    "sphinx >= 5, < 6",
    "sphinx-prompt",
    "sphinx-copybutton",
    "pydata-sphinx-theme < 0.11",
    "sphinx-design",
    "pandoc",
    "sphinx-codeautolink",
]
dev = [
    "ipython",
    "black",
    "ruff",
    "mypy",
    "rich-click",
    "cython-lint",
    "pre-commit",
    "cython==3.0.0b1",
    "setuptools",  # added untill meson-python comes to allow the editable install
]

[project.urls]
Homepage = "https://cherab-lhd.netlify.app/"
documentation = "https://cherab-lhd.netlify.app/"
repository = "https://github.com/munechika-koyo/cherab_lhd"

[tool.cython-lint]
max-line-length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "N", "B", "NPY"]
ignore = ["E501", "N806"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "W", "I", "B", "NPY"]
unfixable = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10
target-version = "py310"

# namespace package setting
namespace-packages = ["cherab/lhd"]

per-file-ignores = {"cherab/lhd/emc3/grid.py" = ["E741"]}

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.mypy]
follow-imports = "silent"
ignore-missing-imports = true
show-column-numbers = true
no-pretty = true

[tool.setuptools.dynamic]
version = { attr = "cherab.lhd.__version__" }
